force-app/main/default/objects/Heuristic_Duplicate_Pair__c/Heuristic_Duplicate_Pair__c.object-meta.xml
<CustomObject>
  <label>Heuristic Duplicate Pair</label>
  <nameField>
    <displayFormat>HDP-{000000}</displayFormat>
    <label>Pair Number</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Heuristic Duplicate Pairs</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>