force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Left_City__c.field-meta.xml
<CustomField>
  <fullName>Left_City__c</fullName>
  <label>Left City</label>
  <length>120</length>
  <type>Text</type>
</CustomField>