force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Left_Display_Value__c.field-meta.xml
<CustomField>
  <fullName>Left_Display_Value__c</fullName>
  <label>Left Display Value</label>
  <length>255</length>
  <type>Text</type>
</CustomField>