force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Left_Phone__c.field-meta.xml
<CustomField>
  <fullName>Left_Phone__c</fullName>
  <label>Left Phone</label>
  <length>80</length>
  <type>Text</type>
</CustomField>