force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Left_Record_Id__c.field-meta.xml
<CustomField>
  <fullName>Left_Record_Id__c</fullName>
  <label>Left Record Id</label>
  <length>18</length>
  <type>Text</type>
</CustomField>