force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Left_Website__c.field-meta.xml
<CustomField>
  <fullName>Left_Website__c</fullName>
  <label>Left Website</label>
  <length>255</length>
  <type>Text</type>
</CustomField>