force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Pair_Key__c.field-meta.xml
<CustomField>
  <fullName>Pair_Key__c</fullName>
  <externalId>true</externalId>
  <label>Pair Key</label>
  <length>80</length>
  <type>Text</type>
  <unique>true</unique>
</CustomField>