force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Reason__c.field-meta.xml
<CustomField>
  <fullName>Reason__c</fullName>
  <label>Reason</label>
  <length>1000</length>
  <type>LongTextArea</type>
</CustomField>