force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Right_City__c.field-meta.xml
<CustomField>
  <fullName>Right_City__c</fullName>
  <label>Right City</label>
  <length>120</length>
  <type>Text</type>
</CustomField>