force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Right_Display_Value__c.field-meta.xml
<CustomField>
  <fullName>Right_Display_Value__c</fullName>
  <label>Right Display Value</label>
  <length>255</length>
  <type>Text</type>
</CustomField>