force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Right_Phone__c.field-meta.xml
<CustomField>
  <fullName>Right_Phone__c</fullName>
  <label>Right Phone</label>
  <length>80</length>
  <type>Text</type>
</CustomField>