force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Right_Record_Id__c.field-meta.xml
<CustomField>
  <fullName>Right_Record_Id__c</fullName>
  <label>Right Record Id</label>
  <length>18</length>
  <type>Text</type>
</CustomField>