force-app/main/default/objects/Heuristic_Duplicate_Pair__c/fields/Right_Website__c.field-meta.xml
<CustomField>
  <fullName>Right_Website__c</fullName>
  <label>Right Website</label>
  <length>255</length>
  <type>Text</type>
</CustomField>